@@ -17,6 +17,7 @@ AC_ARG_VAR(PERL,   [Path to local perl binary])
 AC_PATH_PROG(PERL, perl, no)
 AC_PATH_PROG(CURL, curl, no)
 AC_PATH_PROG(WGET, wget, no)
+AC_PATH_PROG(POD2MAN, pod2man, no)
 
 URL_CAT="neither curl nor wget found"
 if test -x "$WGET"; then
